--- a/templates/dompdf/mypdf.html.twig
+++ b/templates/dompdf/mypdf.html.twig
@@ -6,31 +6,14 @@
         <title>Title of the PDF</title>
     </head>
     <body>
-        <h4>{{ title }}</h4>
-        <p>Lorem Ipsum</p>
-        <p>c'est geniale sa marche complétement</s>
-
-        <table class="table" border='1'>
-            <thead>
-                <tr>
-                    <th>bonjour</th>
-                    <th>bonjour2</th>
-                    <th>bonjour3</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td scope="row">dsfsdfsgd</td>
-                    <td>hhhhhh</td>
-                    <td><ddddd</td>
-                </tr>
-                <tr>
-                    <td scope="row"></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+        <h1>{{ title }}</h1>
+        {% for dodo in dodos %}
+        <ul>
+           <li>{{ dodo.name}}</li>
+           <li>{{ dodo.mail}}</li>
+           <p>Cillum pariatur deserunt exercitation ut esse proident laborum id excepteur. Duis duis nulla in excepteur Lorem. Mollit sit dolor ad commodo quis mollit labore veniam aliqua. Minim proident et eu eu enim pariatur eiusmod consequat officia pariatur proident enim.</p>
+        </ul>
+        {% endfor %}
 
     </body>
 </html>
