--- a/templates/dompdf/mypdf.html.twig
+++ b/templates/dompdf/mypdf.html.twig
@@ -7,11 +7,14 @@
     </head>
     <body>
         <h1>{{ title }}</h1>
+        <h2>{{ message }}<h2>
         {% for dodo in dodos %}
         <ul>
-           <li>{{ dodo.name}}</li>
-           <li>{{ dodo.mail}}</li>
-           <p>Cillum pariatur deserunt exercitation ut esse proident laborum id excepteur. Duis duis nulla in excepteur Lorem. Mollit sit dolor ad commodo quis mollit labore veniam aliqua. Minim proident et eu eu enim pariatur eiusmod consequat officia pariatur proident enim.</p>
+        <li>{{ dodo.name}}</li>
+        <li>{{ dodo.mail}}</li>
+        <li>{{ Roro }}</li>
+        <p>Cillum pariatur deserunt exercitation ut esse proident laborum id excepteur. Duis duis nulla in excepteur Lorem. Mollit sit dolor ad commodo quis mollit labore veniam aliqua. Minim proident et eu eu enim pariatur eiusmod consequat officia pariatur proident enim.</p>
+        <p>Cillum pariatur deserunt exercitation ut esse proident laborum id excepteur. Duis duis nulla in excepteur Lorem. Mollit sit dolor ad commodo quis mollit labore veniam aliqua. Minim proident et eu eu enim pariatur eiusmod consequat officia pariatur proident enim.</p>
         </ul>
         {% endfor %}
 
