add webpack for front

--- a/templates/formulaire.html.twig
+++ b/templates/formulaire.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello ForumaireController!{% endblock %}
+{% block title %}Hello FormulaireController!{% endblock %}
 
 {% block body %}
 {{ form_start(forme)}}
