--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -18,6 +18,8 @@
     </ul>
 
     {{ render(controller('App\\Controller\\FormulaireController::Formulaire')) }}
+    {{ render(controller('App\\Controller\\BookController::index')) }}
+
 
 </div>
 {% endblock %}
