--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="{{ asset('frameworkcss/css/foundation.css') }}">
+        <link rel="stylesheet" href="{{ asset('frameworkcss/css/app.css') }}">
+        {% block stylesheets %}{{ encore_entry_link_tags('app') }}
+        {% endblock %}
+
     </head>
     <body>
         {% for message in app.flashes('notice') %}
@@ -12,6 +16,12 @@
          </div>
         {% endfor %}
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        
+        <script src="{{ asset('frameworkcss/js/vendor/jquery.js')}}"></script>
+        <script src="{{ asset('frameworkcss/js/vendor/what-input.js')}}"></script>
+        <script src="{{ asset('frameworkcss/js/vendor/foundation.js')}}"></script>
+        <script src="{{ asset('frameworkcss/js/app.js')}}"></script>
+
+        {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
     </body>
 </html>
