--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
             {{ message }}
          </div>
         {% endfor %}
+        <div id="root"></div>
         {% block body %}{% endblock %}
         
         <script src="{{ asset('frameworkcss/js/vendor/jquery.js')}}"></script>
@@ -25,3 +26,5 @@
         {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
     </body>
 </html>
+
+ï
