--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -37,5 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('book_new') }}">Create new</a>
+    <a href="{{ path('book_new') }}" class="button">Create new</a>
 {% endblock %}
