--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -34,9 +34,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('book_index') }}">back to list</a>
+    <a href="{{ path('book_index') }}" class="button">back to list</a>
 
-    <a href="{{ path('book_edit', {'id': book.id}) }}">edit</a>
+    <a href="{{ path('book_edit', {'id': book.id}) }}" class="button">edit</a>
 
     {{ include('book/_delete_form.html.twig') }}
 {% endblock %}
